pathing is hard
