# v1/endpoints/information_endpoint/projectsByTeam.go
@@ -9,13 +9,13 @@ import (
 // ProjectsByTeam GET
 // @Summary Get projects by team ProjectsByTeam
 // @Schemes
-// @Description Get information on a cluster. Displays all metadata for specified clusters.
+// @Description Get all projects by team requested.
 // @Tags Information
 // @Accept json
 // @Produce json
 // @Param        owning_team   query      string  false  "Datacenter"
 // @Success 200 {string} Example JSON Output
-// @Router /information/ProjectsByTeam [get]
+// @Router /information/projectsbyteam [get]
 func ProjectsByTeam(g *gin.Context) {
 
 	projects := []string{"dbs-infra-dev", "dbs-infra-test", "dbs-infra-prod"}
